# flaskr

./: .gitignore  Makefile  README.md  pyproject.toml
doc/sphinx/source/: conf.py  index.rst
flaskr/: __init__.py  _auth.py  _blog.py  _db.py  _factory.py
tests/: __init__.py  conftest.py
tests/integration/: test_factory.py
tests/unit/: __init__.py  test_db.py
